--- a/index.html
+++ b/index.html
@@ -141,41 +141,39 @@ body, html {
           <h3>Mr. Dhaneesh</h3>
           <p class="w3-opacity">Zoology Faculty</p>
           <p>MSc, BEd,M.Phil<br />6+ year Experience<br /></p>
-          <a href="url"><p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p></a>
+          
         </div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEin0blAs6aL72FiTNH76m2pV7mskn5LGxMN-oiuJIBagwrHtV4IsFV4hOsVrpiMT3lpOkMLnWdxlHgVpSkGNF7ajMqW1ASvv24RVZ0mJsz02YwS30WlRubmodF4XxxpO6uswrmhldnsH95bNds9VTn6khkCt05tIbrAKe62eC8xmNdTzUw_kpNs6boFww/s1280/IMG-20220811-WA0031.jpg" alt="Dr. Muhammed Shan. PT" style="width:100%">
         <div class="w3-container">
-          <h3>Anja Doe</h3>
-          <p class="w3-opacity">Art Director</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <h3>Dr. Muhammed Shan. PT</h3>
+          <p class="w3-opacity">Physics Faculty</p>
+          <p>PhD<br />6+ Years Experience</p>
+          
         </div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh7bnF54BzwMQl2mo_ty1OQS_fdvYxTbGTvD4WMHwJilqjhvN6ygHwEYJ7URSOXaQVhGdkfdL3TbA34ovCUlzEI3PXGgOyTLyva1FEIJq3ZYjIaCrwVunxIFfOovnzJY83wvK6_-mjk9rrbLN2GTHkY0F0I24nLlm2d4mDELu3PggUyBsOrcRQAOZqZvw/s1600/IMG-20220811-WA0039.jpg" alt="Mr. Sarath" style="width:100%">
         <div class="w3-container">
-          <h3>Mike Ross</h3>
-          <p class="w3-opacity">Web Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
-        </div>
+          <h3>Mr. Sarath</h3>
+          <p class="w3-opacity">Botany Faculty</p>
+          <p>M.Sc, M.Phil, ResearchScholar<br />6+ years Experience</p>
+                  </div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
+        <img src="https://blogger.googeusercontent.com/img/b/R29vZ2xl/AVvXsEibQGz5YEpT3WTqQrpfAnWPtQ5rgWwLb5qcV2oFnjOdqBOfVvIP7lSfOh4OhKTDl5N2gl7drUc4ligCggvAWVhEZMZVGp43_eVHJlU4sFhRNq5TDcbPMXOznrHjaa1dFeg_nnhmY1ZM5-ie4IS_wDjWmn-fp_oqU5t7kzhFTJMbHFM43TEwHJGFoSKz0A/s960/IMG-20220811-WA0042.jpg" alt="Mr. Dhaneesh" style="width:100%">
         <div class="w3-container">
-          <h3>Dan Star</h3>
-          <p class="w3-opacity">Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
-        </div>
+          <h3>Mr. Dhaneesh</h3>
+          <p class="w3-opacity">Zoology Faculty</p>
+          <p>MSc, BEd,M.Phil<br />6+ year Experience<br /></p>
+                  </div>
       </div>
     </div>
   </div>
