--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>SaaSpal - SaaS and Software Landing Page Template</title>
-    <meta name="description" content="" />
+    <title>Candle - The Institute For science</title>
+    <meta name="description" content="The Leading PlusOne,PlusTwo Entrance Oriented Tution Centre In Kerala" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="shortcut icon"
