--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-                Your using free lite version
-              </h1>
+                Your using free lite version of Candle
+              </h1> 
               <p class="wow fadeInUp" data-wow-delay=".6s">
-                Please, purchase full version to get all sections, features and
-                permission to remove footer credit.
+                Download our application for all free and premiume fetuares
               </p>
               <a
                 href="javascript:void(0)"
