--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-                Your using free lite version of Candle
+                Your using free version of Candle
               </h1> 
               <p class="wow fadeInUp" data-wow-delay=".6s">
-                Download our application for all free and premiume fetuares
+                Download our application for all free and premium features
               </p>
               <a
                 href="javascript:void(0)"
                 class="main-btn border-btn btn-hover wow fadeInUp"
                 data-wow-delay=".6s"
-                >Purchase Now</a
+                >Download Now</a
               >
               <a href="#features" class="scroll-bottom">
                 <i class="lni lni-arrow-down"></i
@@ -153,10 +153,9 @@
                 <i class="lni lni-bootstrap"></i>
               </div>
               <div class="content">
-                <h3>Bootstrap 5</h3>
+                <h3>Hi-Tech Classrooms</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
+                 We Provide Good Quality Education To Your Child In Air Conditioned Class Room With Using Of Latest Technology
                 </p>
               </div>
             </div>
