--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div class="content">
                 <h3>Hi-Tech Classrooms</h3>
                 <p>
-                 We Provide Good Quality Education To Your Child In Air Conditioned Class Room With Using Of Latest Technology
+                 Our educational program offers high-quality instruction to students in a comfortable, air-conditioned classroom environment, utilizing the latest technology to enhance the learning experience for your child.
                 </p>
               </div>
             </div>
@@ -166,10 +166,9 @@
                 <i class="lni lni-layout"></i>
               </div>
               <div class="content">
-                <h3>Clean Design</h3>
+                <h3>Experienced Facualties</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
+                  Our program features highly experienced and knowledgeable instructors who specialize in each subject, ensuring your child receives top-notch instruction.
                 </p>
               </div>
             </div>
@@ -180,10 +179,9 @@
                 <i class="lni lni-coffee-cup"></i>
               </div>
               <div class="content">
-                <h3>Easy to Use</h3>
+                <h3>Simple Ways to Learn/h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
+                  Our program emphasizes easy-to-follow teaching methods and techniques, making learning a straightforward and enjoyable experience for students.
                 </p>
               </div>
             </div>
@@ -216,21 +214,17 @@
             <div class="about-content">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Perfect Solution Thriving Online Business
+                  A Perfect Choice for who Choose Much Better
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  dinonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                  justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                  sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet.
+                  Our program is an excellent option for individuals who are committed to achieving academic excellence and seeking a comprehensive, high-quality educational experience. With our experienced faculty, advanced learning tools, and innovative teaching techniques, we provide the perfect choice for those who prioritize learning and academic success.
                 </p>
               </div>
               <a
                 href="javascript:void(0)"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
-                >Discover More</a
+                >CONTACT NOW !</a
               >
             </div>
           </div>
@@ -395,7 +389,224 @@
         </div>
       </div>
     </section>
-    <!-- ======== feature-section end ======== -->
+    <!-- ======== feature-sectio<section id=pricing class="pricing-section pt-120 pb-120">
+<div class=container>
+<div class="row justify-content-center">
+<div class="col-xxl-5 col-xl-6 col-lg-8 col-md-9">
+<div class="section-title text-center mb-35">
+<h2 class="mb-25 wow fadeInUp" data-wow-delay=.2s>
+Choose a Plan
+</h2>
+<p class="wow fadeInUp" data-wow-delay=.4s>
+Lorem ipsum dolor sit amet consetetur sadipscing elitr sswed
+diam nonumy eirmod tempor nvidunt.
+</p>
+</div>
+</div>
+</div>
+<div class="pricing-nav-wrapper mb-60">
+<ul class="nav nav-pills" id=pills-tab role=tablist>
+<li role=presentation>
+<a class=active id=pills-month-tab data-bs-toggle=pill href="#pills-month" role=tab aria-controls=pills-month aria-selected=true>Monthly</a>
+</li>
+<li role=presentation>
+<a id=pills-year-tab data-bs-toggle=pill href="#pills-year" role=tab aria-controls=pills-year aria-selected=false>Yearly</a>
+</li>
+</ul>
+</div>
+<div class=tab-content id=pills-tabContent>
+<div class="tab-pane fade show active" id=pills-month role=tabpanel aria-labelledby=pills-month-tab>
+<div class="row justify-content-center">
+<div class="col-lg-4 col-md-8 col-sm-10">
+<div class=single-pricing>
+<div class=pricing-header>
+<h1 class=price>$36</h1>
+<h3 class=package-name>Basic Account</h3>
+</div>
+<div class=content>
+<ul>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Acces
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Single User
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited
+Storage
+</li>
+<li><i class="lni lni-close"></i> 24/7 Support</li>
+<li><i class="lni lni-close"></i> Free Future Updates</li>
+</ul>
+</div>
+<div class=pricing-btn>
+<a href="javascript:void(0)" class="main-btn btn-hover border-btn">Get Start</a>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-8 col-sm-10">
+<div class=single-pricing>
+<div class=pricing-header>
+<h1 class=price>$56</h1>
+<h3 class=package-name>Standard Account</h3>
+</div>
+<div class=content>
+<ul>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Acces
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> 20+ Users
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited
+Storage
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> 24/7 Support
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Free Future
+Updates
+</li>
+</ul>
+</div>
+<div class=pricing-btn>
+<a href="javascript:void(0)" class="main-btn btn-hover">Get Start</a>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-8 col-sm-10">
+<div class=single-pricing>
+<div class=pricing-header>
+<h1 class=price>$89</h1>
+<h3 class=package-name>Premium Account</h3>
+</div>
+<div class=content>
+<ul>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Acces
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Users
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited
+Storage
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> 24/7 Support
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Free Future
+Updates
+</li>
+</ul>
+</div>
+<div class=pricing-btn>
+<a href="javascript:void(0)" class="main-btn btn-hover border-btn">Get Start</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="tab-pane fade" id=pills-year role=tabpanel aria-labelledby=pills-year-tab>
+<div class="row justify-content-center">
+<div class="col-lg-4 col-md-8 col-sm-10">
+<div class=single-pricing>
+<div class=pricing-header>
+<h1 class=price>$136</h1>
+<h3 class=package-name>Basic Account</h3>
+</div>
+<div class=content>
+<ul>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Acces
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Single User
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited
+Storage
+</li>
+<li><i class="lni lni-close"></i> 24/7 Support</li>
+<li><i class="lni lni-close"></i> Free Future Updates</li>
+</ul>
+</div>
+<div class=pricing-btn>
+<a href="javascript:void(0)" class="main-btn btn-hover border-btn">Get Start</a>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-8 col-sm-10">
+<div class=single-pricing>
+<div class=pricing-header>
+<h1 class=price>$156</h1>
+<h3 class=package-name>Standard Account</h3>
+</div>
+<div class=content>
+<ul>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Acces
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> 20+ Users
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited
+Storage
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> 24/7 Support
+</li>
+<li><i class="lni lni-close"></i> Free Future Updates</li>
+</ul>
+</div>
+<div class=pricing-btn>
+<a href="javascript:void(0)" class="main-btn btn-hover">Get Start</a>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-md-8 col-sm-10">
+<div class=single-pricing>
+<div class=pricing-header>
+<h1 class=price>$189</h1>
+<h3 class=package-name>Premium Account</h3>
+</div>
+<div class=content>
+<ul>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Acces
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited Users
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Unlimited
+Storage
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> 24/7 Support
+</li>
+<li>
+<i class="lni lni-checkmark active"></i> Free Future
+Updates
+</li>
+</ul>
+</div>
+<div class=pricing-btn>
+<a href="javascript:void(0)" class="main-btn btn-hover border-btn">Get Start</a>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</section>
+<!-- ======== end OF PRICING ======== -->
+      
 
     <!-- ======== subscribe-section start ======== -->
     <section id="contact" class="subscribe-section pt-120">
