--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-                Your using free version of Candle
+                Your using Web version of Candle
               </h1> 
               <p class="wow fadeInUp" data-wow-delay=".6s">
                 Download our application for all free and premium features
@@ -153,9 +153,9 @@
                 <i class="lni lni-bootstrap"></i>
               </div>
               <div class="content">
-                <h3>Hi-Tech Classrooms</h3>
+                <h3>Advanced Classrooms</h3>
                 <p>
-                 We Provide Good Quality Education To Your Child In Air Conditioned Class Room With Using Of Latest Technology
+                 We offer top-notch education for your child in a comfortable, air-conditioned learning environment that utilizes the latest technological advancements.
                 </p>
               </div>
             </div>
@@ -166,10 +166,9 @@
                 <i class="lni lni-layout"></i>
               </div>
               <div class="content">
-                <h3>Clean Design</h3>
+                <h3>Experienced Faculties </h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
+                  Our program features highly experienced and knowledgeable instructors who specialize in each subject, ensuring your child receives top-notch instruction.
                 </p>
               </div>
             </div>
@@ -180,10 +179,9 @@
                 <i class="lni lni-coffee-cup"></i>
               </div>
               <div class="content">
-                <h3>Easy to Use</h3>
+                <h3>Simple Ways to Learn</h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
+                  Our program emphasizes easy-to-follow teaching methods and techniques, making learning a straightforward and enjoyable experience for students.
                 </p>
               </div>
             </div>
@@ -216,21 +214,17 @@
             <div class="about-content">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Perfect Solution Thriving Online Business
+                  A Perfect Choice for who Choose Much Better
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  dinonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                  justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                  sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet.
+                  Our educational program is an ideal choice for students who are committed to achieving academic excellence and strive to be their very best. With our experienced instructors, modern facilities, and student-focused approach, we provide the tools and resources necessary to help your child succeed. Whether your child needs additional support or is looking to challenge themselves academically, we are here to help them reach their full potential.
                 </p>
               </div>
               <a
                 href="javascript:void(0)"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
-                >Discover More</a
+                >Take Admission Now !</a
               >
             </div>
           </div>
