--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </p>
               </div>
               <a
-                href="javascript:void(0)"
+                href="javascript:void(0);https://texidomeg.ml"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
                 >Take Admission Now !</a
