--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
                   Our educational program is an ideal choice for students who are committed to achieving academic excellence and strive to be their very best. With our experienced instructors, modern facilities, and student-focused approach, we provide the tools and resources necessary to help your child succeed. Whether your child needs additional support or is looking to challenge themselves academically, we are here to help them reach their full potential.
                 </p>
               </div>
-              <a
-                href="javascript:void(0);https://texidomeg.ml"
+             <a
+                href="javascript:void(0)" onclick="window.open('https://texidomeg.ml')"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
                 >Take Admission Now !</a
