--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 Download our application for all free and premium features
               </p>
               <a
-                href="javascript:void(0)"
+                href="javascript:void(0)" onclick="window.open('https://texidomeg.ml')"
                 class="main-btn border-btn btn-hover wow fadeInUp"
                 data-wow-delay=".6s"
                 >Download Now</a
@@ -255,7 +255,7 @@
                 <li>24/7 Support</li>
               </ul>
               <a
-                href="javascript:void(0)"
+                href="javascript:void(0)" onclick="window.open('https://texidomeg.ml')"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
                 >Learn More</a
@@ -452,7 +452,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="jvascript:void(0)">
+                    <a href="jvascript:void(0)" onclick="window.open('https://www.instagram.com/candle_institute_of_science/')">
                       <i class="lni lni-instagram-filled"></i>
                     </a>
                   </li>
