--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                 </p>
                 <ul class="socials">
                   <li>
-                    <a href="jvascript:void(0)">
+                    <a href="jvascript:void(0)" onclick="window.open('https://www.facebook.com/groups/1808050216138293/user/100002791200092/')">
                       <i class="lni lni-facebook-filled"></i>
                     </a>
                   </li>
