--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 </p>
               </div>
              <a
-                href="javascript:void(0)" onclick="window.open('https://texidomeg.ml')"
+                href="javascript:void(0)" onclick="window.location.href='https://texidomeg.ml';"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
                 >Take Admission Now !</a
