--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="about-content">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Easy to Use with Tons of Awesome Features
+                  Discover Our Unique Approach to Education: Setting Us Apart from the Rest
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
                   Our educational institution's app sets us apart from others with its innovative features designed to enhance the learning experience. Our app offers personalized learning paths based on each student's progress and adapts to their individual needs, making it easier for them to learn at their own pace. We also offer interactive tools, such as quizzes and games, to make learning more engaging and fun. Our app also includes a communication platform where students can interact with instructors and classmates, ask questions, and receive feedback in real-time. With our app, students have access to our high-quality education and resources anytime, anywhere, making learning convenient and accessible for all.
@@ -245,6 +245,11 @@
                 <li>Quick Access</li>
                 <li>Easily to Manage</li>
                 <li>24/7 Support</li>
+                <li>Direct Connection</li>
+                <li>Quick Respond</li>
+                <li>Easily to Learn</li>
+                <li>Clear Doubt with AI</li>
+                <li>In app Chat GPT</li>
               </ul>
               <a
                 href="javascript:void(0)" onclick="window.location.href='https://texidomeg.ml';"
