--- a/index.html
+++ b/index.html
@@ -304,10 +304,9 @@
                   <i class="lni lni-display"></i>
                 </div>
                 <div class="content">
-                  <h3>SaaS Focused</h3>
+                  <h3>Expierienced Tutors</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                   Experienced tutors in tuition classes are subject experts who can share specialized knowledge and enhance student's understanding.
                   </p>
                 </div>
               </div>
@@ -318,10 +317,9 @@
                   <i class="lni lni-leaf"></i>
                 </div>
                 <div class="content">
-                  <h3>Awesome Design</h3>
+                  <h3>Regular Assessments</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                    Candle conducts regular assessments to track student progress in class,this help to give additional support when needed
                   </p>
                 </div>
               </div>
@@ -332,10 +330,9 @@
                   <i class="lni lni-grid-alt"></i>
                 </div>
                 <div class="content">
-                  <h3>Ready to Use</h3>
+                  <h3>Extra Learning Aids</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                   students can access supplementary resources such as concise notes, study materials, and mock tests to enhance their exam readiness.
                   </p>
                 </div>
               </div>
