--- a/index.html
+++ b/index.html
@@ -287,11 +287,10 @@
             <div class="col-xxl-5 col-xl-6 col-lg-8 col-md-9">
               <div class="section-title text-center mb-60">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Why Choose SaaSpal
+                  Why Choose Candle
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore et dolore
+                 We Burn Our Maximum For Your Child's Academic Growth 
                 </p>
               </div>
             </div>
