--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                     </a>
                   </li>
                   <li><a href="jvascript:void(0)">
-                      <i class="lni lni-whatsapp-filled"></i>
+                      <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
                   <li>
