--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                   </li>
                   <li>
                     <a href="jvascript:void(0)">
-                      <i class="lni lni-linkedin-original"></i>
+                      <i class="lni lni-money-location"></i>
                     </a>
                   </li>
                 </ul>
