--- a/index.html
+++ b/index.html
@@ -436,12 +436,12 @@
                 <ul class="socials">
                   <li>
                     <a href="jvascript:void(0)" onclick="window.open('https://www.facebook.com/groups/1808050216138293/user/100002791200092/')">
-                      <i class="lni lni-facebook-filled"></i>
+                      <i class="lni lni-facebook"></i>
                     </a>
                   </li>
                   <li>
                    <a href="jvascript:void(0)" onclick="window.open('https://www.instagram.com/candle_institute_of_science/')">
-                      <i class="lni lni-instagram-filled"></i>
+                      <i class="lni lni-instagram"></i>
                     </a>
                   </li>
                   <li><a href="jvascript:void(0)">
