--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 <ul class="socials">
                   <li>
                     <a href="jvascript:void(0)" onclick="window.open('https://www.facebook.com/groups/1808050216138293/user/100002791200092/')">
-                      <i class="lni lni-facebook"></i>
+                      <i class="lni lni-facebook-filled"></i>
                     </a>
                   </li>
                   <li>
@@ -450,7 +450,7 @@
                   </li>
                   <li>
                     <a href="jvascript:void(0)">
-                      <i class="lni lni-money-location"></i>
+                      <i class="lni lni-phone-set"></i>
                     </a>
                   </li>
                 </ul>
