--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="jvascript:void(0)">
+                    <a href="jvascript:void(0) onclick="window.open('tel:+91-9746701411')">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>
