--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                   </li>
                   <li>
                     <a href="jvascript:void(0) onclick="window.open('tel:+91-9746701411')">
-                      <i class="lni lni-phone"></i>
+                      <i class="lni lni-phone-filled"></i>
                     </a>
                   </li>
                 </ul>
