--- a/index.html
+++ b/index.html
@@ -448,11 +448,20 @@
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
-                  <li>
-                    <a href="jvascript:void(0) onclick="window.open('tel:+91-9746701411')">
-                      <i class="lni lni-phone-filled"></i>
+                  <li><a href="jvascript:void(0)">
+                      <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
+                  <li>
+                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-9746701411';">
+                      <i class="lni lni-phone"></i>
+                    </a>
+                  </li>
+                   <li>
+                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-8129854812';">
+                      <i class="lni lni-phone"></i>
+                    </a>
+                  </li>                            
                 </ul>
               </div>
             </div>
