--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-9746701411';">
+                    <a href="tel:+919746701411">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>
