--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Candle - The Institute For science</title>
     <meta name="description" content="The Leading PlusOne,PlusTwo Entrance Oriented Tution Centre In Kerala" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -449,7 +448,7 @@
                     </a>
                   </li>
                    <li>
-                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-8129854812';">
+                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+919746701411;">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>                            
