--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Candle - The Institute For science</title>
     <meta name="description" content="The Leading PlusOne,PlusTwo Entrance Oriented Tution Centre In Kerala" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -227,7 +226,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6">
-            <div class="about-content">
+            <div class="about-img">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
                   Discover Our Unique Approach to Education: Setting Us Apart from the Rest
@@ -254,6 +253,8 @@
               >
             </div>
           </div>
+      <div class="container">
+        <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6 order-first order-lg-last">
             <div class="about-img-2">
               <img src="assets/img/about/about-2.png" alt="" class="w-100" />
