--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6">
-            <div class="about-img">
+            <div class="about-content">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
                   Discover Our Unique Approach to Education: Setting Us Apart from the Rest
@@ -253,8 +253,6 @@
               >
             </div>
           </div>
-      <div class="container">
-        <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6 order-first order-lg-last">
             <div class="about-img-2">
               <img src="assets/img/about/about-2.png" alt="" class="w-100" />
