Justin index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>Candle - The Institute For science</title>
     <meta name="description" content="The Leading PlusOne,PlusTwo Entrance Oriented Tution Centre In Kerala" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -196,6 +197,11 @@
                 alt=""
                 class="shape shape-1"
               />
+              <img
+                src="assets/img/about/left-dots.svg"
+                alt=""
+                class="shape shape-2"
+              />
             </div>
           </div>
           <div class="col-xl-6 col-lg-6">
@@ -261,7 +267,11 @@
                 alt=""
                 class="shape shape-1"
               />
-              
+              <img
+                src="assets/img/about/right-dots.svg"
+                alt=""
+                class="shape shape-2"
+              />
             </div>
           </div>
         </div>
@@ -443,12 +453,12 @@
                     </a>
                   </li>
                   <li>
-                    <a href="tel:+919746701411">
+                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-9746701411';">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>
                    <li>
-                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+919746701411;">
+                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-8129854812';">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>                            
