--- a/index.html
+++ b/index.html
@@ -452,12 +452,12 @@
                     </a>
                   </li>
                   <li>
-                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-9746701411';">
+                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+919746701411';">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>
                    <li>
-                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+91-8129854812';">
+                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+918129854812';">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>                            
