--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     </a>
                   </li>
                    <li>
-                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+918129854812';">
+                   <a href="javascript:void(0)" onclick="callNumber('+918129854812')">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>                            
