--- a/index.html
+++ b/index.html
@@ -515,5 +515,11 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script>
+    function callNumber(phoneNumber) {
+    window.location.href = 'tel:' +918129854812;
+    }
+</script>
+>                               
   </body>
 </html>
