--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="jvascript:void(0) onclick=onclick="window.location.href='tel:+919746701411';">
+                    <a href="javascript:void(0)" onclick="callNumber('+99746701411')">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>
@@ -516,9 +516,12 @@
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
-    function callNumber(phoneNumber) {
+    function callNumber(918129854812) {
     window.location.href = 'tel:' +918129854812;
     }
+     function callNumber(919746701411) {
+    window.location.href = 'tel:' +919746701411;
+    }                               
 </script>
 >                               
   </body>
