--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)" onclick="callNumber('+99746701411')">
+                    <a href="javascript:void(0)" onclick="callNumber1('+99746701411')">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>
@@ -516,10 +516,10 @@
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
-    function callNumber(918129854812) {
+    function callNumber(phonenumber) {
     window.location.href = 'tel:' +918129854812;
     }
-     function callNumber(919746701411) {
+     function callNumber1(phonrnumber) {
     window.location.href = 'tel:' +919746701411;
     }                               
 </script>
