--- a/index.html
+++ b/index.html
@@ -452,10 +452,12 @@
                     </a>
                   </li>
                   <li>
-                   
+                    <a href="javascript:void(0)" onclick="callNumber('+99746701411')">
+                      <i class="lni lni-phone"></i>
+                    </a>                   
                   </li>
                    <li>
-                   <a href="javascript:void(0)" onclick="callNumber('+918129854812')">
+                   <a href="javascript:void(0)" onclick="callNumber1('+918129854812')">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>                            
@@ -516,7 +518,10 @@
     <script>
     function callNumber(phonenumber) {
     window.location.href = 'tel:' +918129854812;
-    }                              
+    }  
+    function callNumber1(phonenumber) {
+    window.location.href = 'tel:' +919746701411;
+    } 
 </script>
 >                               
   </body>
