--- a/index.html
+++ b/index.html
@@ -443,21 +443,21 @@
                       <i class="lni lni-instagram"></i>
                     </a>
                   </li>
-                  <li><a href="jvascript:void(0)">
+                  <li><a href="jvascript:void(0)" onclick="window.location.href='https://wa.me/918157097411;">
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
-                  <li><a href="jvascript:void(0)">
+                  <li><a href="jvascript:void(0)" onclick='window.open("https://wa.me/918157097411")'>
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)" onclick="callNumber('+99746701411')">
+                    <a href="javascript:void(0)" onclick="callNumber('+918157097411')">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>
                    <li>
-                   <a href="javascript:void(0)" onclick="callNumber1('+918129854812')">
+                   <a href="javascript:void(0)" onclick="callNumber1('+918157097411')">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>                            
@@ -517,10 +517,10 @@
     <script src="assets/js/main.js"></script>
     <script>
     function callNumber(phonenumber) {
-    window.location.href = 'tel:' +918129854812;
+    window.location.href = 'tel:' +918157097411;
     }  
     function callNumber1(phonenumber) {
-    window.location.href = 'tel:' +919746701411;
+    window.location.href = 'tel:' +918157097411;
     } 
 </script>
 >                               
