--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                   Why Choose Candle
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                 We Burn Our Maximum For Your Child's Academic Growth 
+Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of Science. Our Institute Is Dedicated To Helping Your Child Achieve Academic Success And We Are Committed To Making That A Reality. Trust Us To Light The Way To Your Child'S Success.
                 </p>
               </div>
             </div>
@@ -429,8 +429,7 @@
                   </a>
                 </div>
                 <p class="desc mb-30 text-white">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  dinonumy eirmod tempor invidunt.
+                 Enlighting Minds , Illuminating Futures
                 </p>
                 <ul class="socials">
                   <li>
@@ -469,8 +468,8 @@
               <div class="footer-widget">
                 <h3>About Us</h3>
                 <ul class="links">
-                  <li><a href="javascript:void(0)">Home</a></li>
-                  <li><a href="javascript:void(0)">Feature</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#home'">Home</a></li>
+                  <li><a href="javascript:void(0)">Features</a></li>
                   <li><a href="javascript:void(0)">About</a></li>
                   <li><a href="javascript:void(0)">Testimonials</a></li>
                 </ul>
