--- a/index.html
+++ b/index.html
@@ -466,12 +466,12 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 
             <div class="col-xl-2 col-lg-2 col-md-6">
               <div class="footer-widget">
-                <h3>About Us</h3>
+                <h3> Explore </h3>
                 <ul class="links">
                   <li><a href="javascript:void(0)" onclick="href='#home'">Home</a></li>
-                  <li><a href="javascript:void(0)">Features</a></li>
-                  <li><a href="javascript:void(0)">About</a></li>
-                  <li><a href="javascript:void(0)">Testimonials</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#features'">Features</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#about'">About</a></li>
+                  <li><a href="javascript:void(0)" onclick="href='#why'">Why Us</a></li>
                 </ul>
               </div>
             </div>
