--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="page-scroll" href="#why">Why</a>
+                      <a class="page-scroll" href="#why">Why Us</a>
                     </li>
                   </ul>
                 </div>
@@ -106,7 +106,7 @@
     <!-- ======== hero-section start ======== -->
     <section id="home" class="hero-section">
       <div class="container">
-        <div class="row align-items-center position-relative">
+        <div class="row align-items-center position-absolute">
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
