--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <!-- ======== hero-section start ======== -->
     <section id="home" class="hero-section">
       <div class="container">
-        <div class="row align-items-center position-absolute">
+        <div class="row align-items-center position-relative">
           <div class="col-lg-6">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
