--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="https://browsehappy.com/">upgrade your browser</a> to improve
         your experience and security.
       </p>
-    <![endif]-->
+    <![endif]-->from
 
     <!-- ======== preloader start ======== -->
     <div class="preloader">
@@ -315,7 +315,17 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   A Perfect Choice for who Choose Much Better
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Our educational program is an ideal choice for students who are committed to achieving academic excellence and strive to be their very best. With our experienced instructors, modern facilities, and student-focused approach, we provide the tools and resources necessary to help your child succeed. Whether your child needs additional support or is looking to challenge themselves academically, we are here to help them reach their full potential.
+                  Our educational program is an ideal choice
+                  for students who are committed to achieving
+                  academic excellence and strive to be their
+                  very best. With our experienced instructors,
+                  modern facilities, and student-focused 
+                  approach, we provide the tools and resources
+                  necessary to help your child succeed.
+                  Whether your child needs additional support
+                  or is looking to challenge themselves
+                  academically, we are here to help them
+                  reach their full potential.
                 </p>
               </div>
              <a
@@ -339,21 +349,39 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
             <div class="about-content">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Discover Our Unique Approach to Education: Setting Us Apart from the Rest
+                  Discover Our Unique
+                  Approach to Education;
+                  Setting Us Apart from
+                  the Rest
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                 At our educational institute, we pride ourselves on our innovative and personalized approach to education. Unlike traditional schools, we believe in tailoring our instruction to meet the unique needs of each student. Our experienced instructors take the time to understand each student's learning style, pace, and preferences, and create customized lesson plans to help them reach their full potential. We also incorporate the latest technology and teaching methods to make learning engaging and effective. Additionally, we offer a supportive and nurturing environment where students can feel comfortable asking questions and seeking guidance. Our focus is on creating a positive and effective learning experience for all our students, setting us apart from the rest.
+                 At our educational institute, we pride ourselves
+                 on our innovative and personalized approach to
+                 education. Unlike traditional schools, we
+                 believe in tailoring our instruction to meet
+                 the unique needs of each student. Our
+                 experienced instructors take the time to
+                 understand each student's learning style, 
+                 pace, and preferences, and create customized
+                 lesson plans to help them reach their full
+                 potential. We also incorporate the latest
+                 technology and teaching methods to make
+                 learning engaging and effective. Additionally,
+                 we offer a supportive and nurturing environment
+                 where students can feel comfortable asking
+                 questions and seeking guidance. Our focus
+                 is on creating a positive and effective
+                 learning experience for all our students,
+                 setting us apart from the rest.
                 </p>
               </div>
               <ul>
                 <li>Quick Access</li>
-                <li>Easily to Manage</li>
-                <li>24/7 Support</li>
+                <li>Easy to Manage</li>
                 <li>Direct Connection</li>
                 <li>Quick Respond</li>
-                <li>Easily to Learn</li>
-                <li>Clear Doubt with AI</li>
-                <li>In app Chat GPT</li>
+                <li>Easy To Learn</li>
+                <li>In App Chat GPT</li>
               </ul>
               <a
                 href="javascript:void(0)" onclick="window.location.href='https://texidomeg.ml';"
