--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <div class="content">
                   <h3>Expierienced Tutors</h3>
                   <p>
-                   Experienced tutors in tuition classes are subject experts who can share specialized knowledge and enhance student's understanding.
+                   Experienced tutors in tuition classes are subject experts who can share specialized knowledge & enhance student's understandingSS
                   </p>
                 </div>
               </div>
@@ -236,7 +236,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <div class="content">
                   <h3>Extra Learning Aids</h3>
                   <p>
-                   students can access supplementary resources such as concise notes, study materials, and mock tests to enhance their exam readiness.
+                   students can access supplementary resources such as concise notes, study materials, & mock tests to enhance their exam readiness
                   </p>
                 </div>
               </div>
@@ -247,10 +247,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   <i class="lni lni-javascript"></i>
                 </div>
                 <div class="content">
-                  <h3>Vanilla JS</h3>
+                  <h3>Interactive Learning</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                  We use interactive teaching methods like multimedia resources, group activities, and games to enhance learning.
                   </p>
                 </div>
               </div>
@@ -261,10 +260,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   <i class="lni lni-layers"></i>
                 </div>
                 <div class="content">
-                  <h3>Essential Sections</h3>
+                  <h3> Extra practice & reinforcement</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                   Tuition classes often offer extra practice & reinforcement of key concepts, which can help students to better understand & retain the material
                   </p>
                 </div>
               </div>
@@ -275,10 +273,9 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   <i class="lni lni-rocket"></i>
                 </div>
                 <div class="content">
-                  <h3>Highly Optimized</h3>
+                  <h3> Personalized attention</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                 In a tuition class, students can receive personalized attention from the tutor, which can help them understand difficult concepts better
                   </p>
                 </div>
               </div>
