--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <!-- ======== CSS here ======== -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />and
     <link rel="stylesheet" href="assets/css/lineicons.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -262,7 +262,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <div class="content">
                   <h3> Extra practice & reinforcement</h3>
                   <p>
-                   Tuition classes often offer extra practice & reinforcement of key concepts, which can help students to better understand & retain the material
+                   Tuition classes often offer extra practice & reinforcement of key concepts, which can help students to understand better
                   </p>
                 </div>
               </div>
