--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <!-- ======== CSS here ======== -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />and
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/lineicons.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
         <a href="https://browsehappy.com/">upgrade your browser</a> to improve
         your experience and security.
       </p>
-    <![endif]-->from
+    <![endif]-->
 
     <!-- ======== preloader start ======== -->
     <div class="preloader">
