--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   </a>
                 </div>
                 <p class="desc mb-30 text-white">
-                 Enlighting Minds , Illuminating Futures
+                 Enlighting Minds , Illuminating Futures -The Candle Institute Of Science
                 </p>
                 <ul class="socials">
                   <li>
@@ -470,21 +470,17 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                       <i class="lni lni-instagram"></i>
                     </a>
                   </li>
-                  <li><a href="jvascript:void(0)" onclick="window.location.href='https://wa.me/918157097411;">
-                      <i class="lni lni-whatsapp"></i>
-                    </a>
-                  </li>
-                  <li><a href="jvascript:void(0)" onclick='window.open("https://wa.me/918157097411")'>
+                  <li><a href="jvascript:void(0)" onclick="window.location.href='https://wa.me/919037140240;">
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)" onclick="callNumber('+918157097411')">
+                    <a href="javascript:void(0)" onclick="callNumber('+919037140240')">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>
                    <li>
-                   <a href="javascript:void(0)" onclick="callNumber1('+918157097411')">
+                   <a href="javascript:void(0)" onclick="callNumber1('+919037240140')">
                       <i class="lni lni-phone"></i>
                     </a>
                   </li>                            
@@ -544,10 +540,10 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/main.js"></script>
     <script>
     function callNumber(phonenumber) {
-    window.location.href = 'tel:' +918157097411;
+    window.location.href = 'tel:' +919037140240;
     }  
     function callNumber1(phonenumber) {
-    window.location.href = 'tel:' +918157097411;
+    window.location.href = 'tel:' +919037240140;
     } 
 </script>
 >                               
