--- a/index.html
+++ b/index.html
@@ -457,7 +457,8 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                   </a>
                 </div>
                 <p class="desc mb-30 text-white">
-                 Enlighting Minds , Illuminating Futures -The Candle Institute Of Science
+                 Enlighting Minds , Illuminating Futures
+                  -Candle The Institute Of science
                 </p>
                 <ul class="socials">
                   <li>
@@ -470,7 +471,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                       <i class="lni lni-instagram"></i>
                     </a>
                   </li>
-                  <li><a href="jvascript:void(0)" onclick="window.location.href='https://wa.me/919037140240;">
+                  <li><a href="jvascript:void(0)" onclick="window.location.href='https://wa.me/919037140240';">
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
