--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                       <i class="lni lni-instagram"></i>
                     </a>
                   </li>
-                  <li><a href="jvascript:void(0)" onclick="window.location.href='https://wa.me/919037140240';">
+                  <li><a href="jvascript:void(0)" onclick="window.open('https://wa.me/919037140240')">
                       <i class="lni lni-whatsapp"></i>
                     </a>
                   </li>
