--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 Download our application for all free and premium features
               </p>
               <a
-                href="javascript:void(0)" onclick="window.location.href='https://texidomeg.ml';"
+                href="javascript:void(0)" onclick="alert('The Site Under Devolpment')"
                 class="main-btn border-btn btn-hover wow fadeInUp"
                 data-wow-delay=".6s"
                 >Download Now</a
@@ -327,7 +327,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 </p>
               </div>
              <a
-                href="javascript:void(0)" onclick="window.location.href='https://texidomeg.ml';"
+                href="javascript:void(0)" onclick="alert('The Site Under Devolpment')"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
                 >Take Admission Now !</a
@@ -382,7 +382,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                 <li>In App Chat GPT</li>
               </ul>
               <a
-                href="javascript:void(0)" onclick="window.location.href='https://texidomeg.ml';"
+                href="javascript:void(0)" onclick="alert('The Site Under Devolpment')"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
                 >Learn More</a
@@ -515,12 +515,11 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
 
             <div class="col-xl-3 col-lg-3 col-md-6">
               <div class="footer-widget">
-                <h3>Other Products</h3>
+                <h3>About Creators</h3>
                 <ul class="links">
-                  <li><a href="jvascript:void(0)">Accounting Software</a></li>
-                  <li><a href="jvascript:void(0)">Billing Software</a></li>
-                  <li><a href="jvascript:void(0)">Booking System</a></li>
-                  <li><a href="jvascript:void(0)">Tracking System</a></li>
+                  <li><a href="jvascript:void(0)">Follow Us</a></li>
+                  <li><a href="jvascript:void(0)" onclick="window.open('https://www.texidomeg.ml')">Official website</a></li>
+                  <li><a href="jvascript:void(0)">Contact Us</a></li>
                 </ul>
               </div>
             </div>
