--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="assets/css/lineicons.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!--[if lte IE 9]>
@@ -476,7 +478,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                     </a>
                   </li>
                   <li>
-                    <a href="javascript:void(0)" onclick="document.getElementById('contact').style.display='block'">
+		  <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'">Download App</button></h6>
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>                 
@@ -535,16 +537,15 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
     <script src="assets/js/main.js"></script>
    
   
-<!-- Subscribe Modal -->
-<div id="contact">
-  <div  style="padding:32px">
-    <div>
-      <i onclick="document.getElementById('contact').style.display='none'" ></i>
+<div id="subscribe" class="w3-modal w3-animate-opacity">
+  <div class="w3-modal-content" style="padding:32px">
+    <div class="w3-container w3-white">
+      <i onclick="document.getElementById('subscribe').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
       <h2 class="w3-wide">Click Here To Proceed</h2>
-      <p>Contact To Office</p>
-	<a href="tel:919037240140"><button type="button" onclick="document.getElementById('subscribe').style.display='none'">Phone-1</button></a><br />
-	<h6>Try With</h6>
-	 <a href="tel:919037140240" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >Phone-2</button></a>
+      <p>Download Our Official App Now</p>
+	<a href="OfficialApplication.html"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('subscribe').style.display='none'">Download Now</button></a><br />
+	<h6>To Contact</h6>
+	 <a href="tel:917510255646" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >To Contact Directly</button></a>
     </div> 
   </div>
 </div>
