--- a/index.html
+++ b/index.html
@@ -543,8 +543,8 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
       <i onclick="document.getElementById('contact').style.display='none'" class="fa fa-remove w3-transparent w3-button w3-xlarge w3-right"></i>
       <h2 class="w3-wide">Click Here To Proceed</h2>
       <p>Official App Now</p>
-	<a href="OfficialApplication.html"><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('contact').style.display='none'">Download Now</button></a><br />
-	<h6>To Contact</h6>
+	 <a href="tel:917510255646" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >To Contact Directly</button></a>
+	    <h6>To Contact</h6>
 	 <a href="tel:917510255646" ><button type="button" class="w3-button w3-block w3-padding-large w3-red w3-margin-bottom" >To Contact Directly</button></a>
     </div> 
   </div>
