--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ Discover The Best +1 And +2 Entrance Exam-Focused Tuition At Candle Institute Of
                     </a>
                   </li>
                   <li>
-		    <a href="#" id="popup-link">Click here to open popup</a>
+		    <a id="popup-link">
                       <i class="lni lni-phone"></i>
                     </a>                   
                   </li>                 
